tests/fixtures/invalid/pow_none_dict_bool.py
# Cannot call pow() with None, Dict[str, int], Bool
x = pow(None, {"a": 1}, True)
